@@ -18,10 +18,7 @@ package io.gravitee.am.plugins.extensiongrant.plugin;
 import io.gravitee.am.extensiongrant.api.ExtensionGrant;
 import io.gravitee.am.plugins.extensiongrant.core.ExtensionGrantDefinition;
 import io.gravitee.am.plugins.extensiongrant.core.ExtensionGrantPluginManager;
-import io.gravitee.plugin.core.api.Plugin;
-import io.gravitee.plugin.core.api.PluginClassLoaderFactory;
-import io.gravitee.plugin.core.api.PluginHandler;
-import io.gravitee.plugin.core.api.PluginType;
+import io.gravitee.plugin.core.api.*;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -31,7 +28,7 @@ import org.springframework.util.Assert;
  * @author Titouan COMPIEGNE (titouan.compiegne at graviteesource.com)
  * @author GraviteeSource Team
  */
-public class ExtensionGrantPluginHandler implements PluginHandler {
+public class ExtensionGrantPluginHandler extends AbstractPluginHandler {
 
     private final Logger LOGGER = LoggerFactory.getLogger(ExtensionGrantPluginHandler.class);
 
@@ -43,29 +40,36 @@ public class ExtensionGrantPluginHandler implements PluginHandler {
 
     @Override
     public boolean canHandle(Plugin plugin) {
-        return PluginType.EXTENSION_GRANT.name().equalsIgnoreCase(plugin.type());
+        return type().equalsIgnoreCase(plugin.type());
     }
 
     @Override
-    public void handle(Plugin plugin) {
+    protected void handle(Plugin plugin, Class<?> pluginClass) {
         try {
-            ClassLoader classloader = pluginClassLoaderFactory.getOrCreateClassLoader(plugin, this.getClass().getClassLoader());
-
-            final Class<?> tokenGranterClass = classloader.loadClass(plugin.clazz());
             LOGGER.info("Register a new extension grant plugin: {} [{}]", plugin.id(), plugin.clazz());
 
-            Assert.isAssignable(ExtensionGrant.class, tokenGranterClass);
+            Assert.isAssignable(ExtensionGrant.class, pluginClass);
 
-            ExtensionGrant identityIdentityProvider = createInstance((Class<ExtensionGrant>) tokenGranterClass);
-            extensionGrantPluginManager.register(new ExtensionGrantDefinition(identityIdentityProvider, plugin));
+            var extensionGrant = createInstance((Class<ExtensionGrant>) pluginClass);
+            extensionGrantPluginManager.register(new ExtensionGrantDefinition(extensionGrant, plugin));
         } catch (Exception iae) {
             LOGGER.error("Unexpected error while create extension grant instance", iae);
         }
     }
 
+    @Override
+    protected String type() {
+        return PluginType.EXTENSION_GRANT.name();
+    }
+
+    @Override
+    protected ClassLoader getClassLoader(Plugin plugin) {
+        return pluginClassLoaderFactory.getOrCreateClassLoader(plugin, this.getClass().getClassLoader());
+    }
+
     private <T> T createInstance(Class<T> clazz) throws Exception {
         try {
-            return clazz.newInstance();
+            return clazz.getDeclaredConstructor().newInstance();
         } catch (InstantiationException | IllegalAccessException ex) {
             LOGGER.error("Unable to instantiate class: {}", clazz.getName(), ex);
             throw ex;
